Temporarily turn off the memory-zeroing optimization on macOS.

It is breaking macOS GPU tests.

Bug: 890752
TBR: ajwong
Change-Id: I3f686473483cab053fc43e3d4b719a2900bdd71b
Cq-Include-Trybots: luci.chromium.try:mac_optional_gpu_tests_rel
Reviewed-on: https://chromium-review.googlesource.com/1255592
Reviewed-by: Chris Palmer <palmer@chromium.org>
Commit-Queue: Chris Palmer <palmer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595654}
Former-commit-id: a6519e88c07449783269f87535afea8e55effbdb