base/allocator/partition_allocator/partition_root_base.h
@@ -10,6 +10,7 @@
 #include "base/allocator/partition_allocator/partition_bucket.h"
 #include "base/allocator/partition_allocator/partition_direct_map_extent.h"
 #include "base/allocator/partition_allocator/partition_page.h"
+#include "build/build_config.h"
 
 namespace base {
 namespace internal {
@@ -141,6 +142,11 @@ ALWAYS_INLINE void* PartitionRootBase::AllocFromBucket(PartitionBucket* bucket,
   }
   PartitionCookieWriteValue(char_ret + kCookieSize + no_cookie_size);
 #else
+#if defined(OS_MACOSX)
+  // TODO(https://crbug.com/890752): Remove this when we figure out and fix
+  // whatever is breaking on macOS.
+  is_already_zeroed = false;
+#endif
   if (ret && zero_fill && !is_already_zeroed) {
     memset(ret, 0, size);
   }
